--- a/.env
+++ b/.env
@@ -1,2 +1,3 @@
 MONGODB = mongodb+srv://ajozuzim2:Ajo!qwerty@shop.toii6.mongodb.net/admincrud?retryWrites=true&w=majority
 SECRET_KEY = secret
+PORT = 5000
