--- a/.env
+++ b/.env
@@ -1,3 +1,4 @@
 MONGODB = mongodb+srv://ajozuzim2:Ajo!qwerty@shop.toii6.mongodb.net/admincrud?retryWrites=true&w=majority
 SECRET_KEY = secret
+JWT_SEC = jwtsecret
 PORT = 5000
